Added QueueManager and more test results